style(docs): improved landing page styling to avoid image distortion

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -74,6 +74,22 @@
   bottom: 1rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -92,6 +108,10 @@
 
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .my-2 {
@@ -181,6 +201,10 @@
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -213,12 +237,30 @@
   height: 20rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .max-h-\[550px\] {
   max-height: 550px;
 }
 
 .max-h-80 {
   max-height: 20rem;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-60 {
+  max-height: 15rem;
 }
 
 .w-full {
@@ -245,6 +287,10 @@
   width: 20rem;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .max-w-lg {
   max-width: 32rem;
 }
@@ -255,6 +301,10 @@
 
 .max-w-6xl {
   max-width: 72rem;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .flex-1 {
@@ -422,6 +472,10 @@
   background-size: contain;
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -471,6 +525,10 @@
 
 .text-right {
   text-align: right;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .align-text-bottom {
@@ -656,6 +714,10 @@
 
   .md\:w-52 {
     width: 13rem;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:max-w-\[450px\] {
